[package]
name = "exercise-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
davisjr = { version = "*", features = ["tracing"] }
include_dir = "*"
tokio = "*"
tracing = "*"
tracing-subscriber = "*"
