[package]
name = "exercise-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
davisjr = { version = "*", features = ["tracing"] }
sqlx = { version = "*", features = [ "runtime-tokio-rustls", "sqlite", "macros", "uuid", "time", "bigdecimal", "tls", "chrono" ] }
tokio = { version = "*", features = [ "full" ] }
include_dir = "*"
tracing = "*"
tracing-subscriber = "*"
anyhow = "^1"
futures = "*"
http = "*"
hyper = { version = "*", features = [ "stream" ] }
serde = "*"
serde_derive = "*"
serde_json = "*"
chrono = { version = "*", features = [ "serde" ] }

[profile.release]
strip = true
lto = true
codegen-units = 48
opt-level = 3
